objects/tffa__Referral__c.object
<CustomObject>
    <description>Referrals are potential customers (prospects) that have been introduced to your business by existing customers or agents. Referrals are usually used as a marketing tactic that makes use of recommendations and word of mouth to grow your business&apos;s customer base through the networks of its existing customers. In return, the existing customers may receive rewards (e.g. fee waiver, cash rewards, etc) for their referrals. Referrals are expected to be used with a referral code and referral program and rarely standalone.</description>
    <fields>
        <fullName>tffa__AddressState__c</fullName>
        <description>State (address) of the referred party.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Address state</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Age__c</fullName>
        <description>Age of the referred party.</description>
        <label>Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__BrandCode__c</fullName>
        <description>Unique code of the Brand code this referral is associated with.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Brand Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Bundle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The product bundle referred by the referrer.</description>
        <label>Bundle</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>tffa__Product__c.tffa__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>tffa__Product__c.tffa__Type__c</field>
                <operation>equals</operation>
                <value>Bundle</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>tffa__Product__c</referenceTo>
        <relationshipLabel>Bundle Referrals</relationshipLabel>
        <relationshipName>BundleReferrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__Campaign__c</fullName>
        <description>The individual campaign name, slogan, promo code associated with the referral program. Aligns with utm_campaign parameter.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Comments__c</fullName>
        <description>Additional notes captured on the referral. Can serve as instructions for the referred party.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A marker that indicates whether the Referral has reached the end of its lifecycle.</description>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Converted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the referral has been converted.</description>
        <label>Converted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Country__c</fullName>
        <description>Country of the referred party.</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__AddressCountry</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__DeviceBrowser__c</fullName>
        <description>The browser of the client creating the referral</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Device Browser</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__DeviceLocationCity__c</fullName>
        <description>The city of the device</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Device Location City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__DeviceLocationContinent__c</fullName>
        <description>The continent where device located</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Device Location Continent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__DeviceLocationCountry__c</fullName>
        <description>The country where device located</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Device Location Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__DeviceLocationState__c</fullName>
        <description>The state (address) where the device resides.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Device Location State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__DeviceLocationZipCode__c</fullName>
        <description>The device zip code</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Device Location Zip code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__DeviceLocation__c</fullName>
        <description>Specifies the precise geolocation of the device from which referral was made. A device&apos;s IP can be used to derive this value within some degree of confidence.</description>
        <label>Device Location</label>
        <scale>3</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>tffa__DeviceOS__c</fullName>
        <description>The OS of the client creating the referral</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Device OS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Device__c</fullName>
        <description>Identifier of the device creating the referral</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Device</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Expired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the referral has expired</description>
        <label>Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__ExpiresOn__c</fullName>
        <description>Date and time on which the referral expires.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Expires on</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__FirstName__c</fullName>
        <description>The first name of the individual (party) being referred.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>First name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__IpAddress__c</fullName>
        <description>IP address of the device</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Ip address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsReferredByCurrentUser__c</fullName>
        <description>Indicates whether the Referral was referred by current user.</description>
        <formula>tffa__ReferringAgentUser__c = $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Referred by Current User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsReferredPartyCaptured__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether referred party details were captured on the referral.</description>
        <label>Capture Party?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__LastName__c</fullName>
        <description>The last name of the individual (party) being referred.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__LastRemindedOn__c</fullName>
        <description>Date and time of last reminder sent to the referred party.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last reminded on</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tffa__LastSyncedOn__c</fullName>
        <description>The date and time of last synchronization with submission record.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last synced on</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tffa__LocationCode__c</fullName>
        <description>Unique code of the current geographical location/branch serving the referral.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Location(Branch) code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The current geographical location/branch serving the referral. This will be computed and be useful for regulations.</description>
        <label>Location(Branch)</label>
        <referenceTo>tffa__Location__c</referenceTo>
        <relationshipLabel>Referrals</relationshipLabel>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__Medium__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The advertising, marketing or traffic medium associated with the referral. e.g. email, referral, etc. Aligns with utm_medium parameter.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__MortgageLoanPurpose__c</fullName>
        <description>Primary purpose of mortgage product if selected.</description>
        <label>Mortgage loan purpose</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__MortgageLoanPurpose</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>Referrals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__OutOfSync__c</fullName>
        <description>Indicates if referral requires synchronization with related objects e.g. submission.</description>
        <formula>NOT(ISNULL(tffa__SyncPendingOn__c)) &amp;&amp; (ISNULL(tffa__LastSyncedOn__c) || tffa__SyncPendingOn__c &gt; tffa__LastSyncedOn__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Out of Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Prequal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the referral requires prequalification for mortgage product if selected.</description>
        <label>Prequal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__PrimaryEmail__c</fullName>
        <description>Primary email of the party being referred.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>tffa__PrimaryPhone__c</fullName>
        <description>Primary phone number of the party being referred.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>tffa__PrimaryProductCategory__c</fullName>
        <description>The product category of the primary product.</description>
        <label>Primary Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ProductCategory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__PrimaryProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The primary product referred by the referrer.</description>
        <label>Primary Financial Product</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Primary product is inactive or invalid.</errorMessage>
            <filterItems>
                <field>tffa__Product__c.tffa__Category__c</field>
                <operation>equals</operation>
                <valueField>$Source.tffa__PrimaryProductCategory__c</valueField>
            </filterItems>
            <filterItems>
                <field>tffa__Product__c.tffa__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>tffa__Product__c.tffa__Type__c</field>
                <operation>equals</operation>
                <value>Product</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>tffa__Product__c</referenceTo>
        <relationshipLabel>Primary Referrals</relationshipLabel>
        <relationshipName>PrimaryReferrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__ProgramCode__c</fullName>
        <description>The unique code of the referral program.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Program Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ProgramName__c</fullName>
        <description>The name of the referral program.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Program name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related referral program</description>
        <label>Program</label>
        <referenceTo>tffa__ReferralProgram__c</referenceTo>
        <relationshipLabel>Referrals</relationshipLabel>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__Promotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The promotion referred by the referrer.</description>
        <label>Promotion</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Promotion is inactive.</errorMessage>
            <filterItems>
                <field>tffa__Promotion__c.tffa__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>tffa__Promotion__c</referenceTo>
        <relationshipLabel>Referrals</relationshipLabel>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__QRCodeUrl__c</fullName>
        <description>URL to access QR code that can be scanned to get the referral url.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>QR Code Url</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__ReferralCodeEntity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to referral code entity.</description>
        <label>Referral Code</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR 3</booleanFilter>
            <filterItems>
                <field>tffa__ReferralCode__c.tffa__Agent__c</field>
                <operation>equals</operation>
                <valueField>$Source.tffa__ReferringAgent__c</valueField>
            </filterItems>
            <filterItems>
                <field>tffa__ReferralCode__c.tffa__Party__c</field>
                <operation>equals</operation>
                <valueField>$Source.tffa__ReferringParty__c</valueField>
            </filterItems>
            <filterItems>
                <field>tffa__ReferralCode__c.tffa__AgentUser__c</field>
                <operation>equals</operation>
                <valueField>$User.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>tffa__ReferralCode__c</referenceTo>
        <relationshipLabel>Referrals</relationshipLabel>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__ReferralCode__c</fullName>
        <description>The referral code that was used when creating the referral.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Referral code (value)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ReferredParty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to referred party. Populated if referred party exists in the system or later when the referred party is onboarded into the system.</description>
        <label>Referred Party</label>
        <referenceTo>tffa__Party__c</referenceTo>
        <relationshipLabel>Referred Referrals</relationshipLabel>
        <relationshipName>ReferredReferrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__ReferrerEmail__c</fullName>
        <description>Primary email of the referrer.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Referrer email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>tffa__ReferrerName__c</fullName>
        <description>Referrer name. Derived from referring party/agent name.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Referrer name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ReferrerReward__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The reward earned by the referrer of the referral.</description>
        <label>Referrer reward</label>
        <referenceTo>tffa__Reward__c</referenceTo>
        <relationshipLabel>Referrals</relationshipLabel>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__ReferrerUrl__c</fullName>
        <description>URL of the previous web page from which the referral link was followed.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Referrer URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>tffa__ReferringAgentUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Denormalized field of Referring Agent.</description>
        <label>Referring Agent User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Referrals</relationshipLabel>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__ReferringAgent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The agent (or banker) responsible for submitting the initial referral.</description>
        <label>Referring Agent</label>
        <referenceTo>tffa__AgentDetail__c</referenceTo>
        <relationshipLabel>Referrals</relationshipLabel>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__ReferringParty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The person responsible for submitting the initial referral.</description>
        <label>Referring Party</label>
        <referenceTo>tffa__Party__c</referenceTo>
        <relationshipLabel>Referrals</relationshipLabel>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__ReminderCount__c</fullName>
        <description>Captures count of reminder emails sent to referee (referred party).</description>
        <label>Reminder count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__ReminderDate__c</fullName>
        <description>Captures next date on which reminder email will be sent to referee (referred party).</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Reminder date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__ReminderSchedule__c</fullName>
        <description>Schedule (frequency in days) for reminder emails sent to referee (referred party).</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Derived from Referral program</inlineHelpText>
        <label>Reminder schedule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Rewarded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the referral has been rewarded. Only applicable to converted referrals.</description>
        <label>Rewarded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__SecondaryProductCategory__c</fullName>
        <description>The product category of the secondary product.</description>
        <label>Secondary Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ProductCategory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__SecondaryProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The secondary product referred by the referrer in addition to primary product.</description>
        <label>Secondary Financial Product</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Secondary product is inactive or invalid.</errorMessage>
            <filterItems>
                <field>tffa__Product__c.tffa__Category__c</field>
                <operation>equals</operation>
                <valueField>$Source.tffa__SecondaryProductCategory__c</valueField>
            </filterItems>
            <filterItems>
                <field>tffa__Product__c.tffa__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>tffa__Product__c.tffa__Type__c</field>
                <operation>equals</operation>
                <value>Product</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>tffa__Product__c</referenceTo>
        <relationshipLabel>Secondary Referrals</relationshipLabel>
        <relationshipName>SecondaryReferrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__Source__c</fullName>
        <defaultValue>&quot;direct&quot;</defaultValue>
        <description>Source of referral. e.g. email, twitter, etc</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Status__c</fullName>
        <defaultValue>&quot;OPEN&quot;</defaultValue>
        <description>Current status of the referral. Default is OPEN. Useful for tracking progress of a referral.</description>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ReferralStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the referral was submitted by the referrer using a &quot;send referral&quot; widget.</description>
        <label>Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__SyncPendingOn__c</fullName>
        <description>The date and time when the referral was marked pending for synchronization.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Sync pending on</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tffa__TertiaryProductCategory__c</fullName>
        <description>The product category of the tertiary product.</description>
        <label>Tertiary Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ProductCategory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__TertiaryProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The tertiary product referred by the referrer in addition to primary and secondary products.</description>
        <label>Tertiary Financial Product</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Tertiary product is inactive or invalid.</errorMessage>
            <filterItems>
                <field>tffa__Product__c.tffa__Category__c</field>
                <operation>equals</operation>
                <valueField>$Source.tffa__TertiaryProductCategory__c</valueField>
            </filterItems>
            <filterItems>
                <field>tffa__Product__c.tffa__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>tffa__Product__c.tffa__Type__c</field>
                <operation>equals</operation>
                <value>Product</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>tffa__Product__c</referenceTo>
        <relationshipLabel>Tertiary Referrals</relationshipLabel>
        <relationshipName>TertiaryReferrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__UnsubscribeUrl__c</fullName>
        <description>A link for the referee (referred party) to unsubscribe themself from reminder emails.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Unsubscribe url</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__Url__c</fullName>
        <description>Usually points to sales application where the referral can be fulfilled.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Referral Url</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <label>Referral</label>
    <listViews>
        <fullName>tffa__All</fullName>
        <columns>NAME</columns>
        <columns>tffa__Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>tffa__ReferringParty__c</columns>
        <columns>tffa__ReferringAgent__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>tffa__MyReferrals</fullName>
        <columns>NAME</columns>
        <columns>tffa__Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>tffa__Program__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>tffa__IsReferredByCurrentUser__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Referrals</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Referrals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>